--- a/index.html
+++ b/index.html
@@ -12,36 +12,29 @@
     <title>範例網站</title>
     <link rel="stylesheet" href="css/mainPage.css" />
     <link rel="stylesheet" href="css/header.css" />
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
-    <header id="header">
-      <div class="container">
-        <a href="#">
-          <img
-            class="logo"
-            alt="Omnifood logo"
-            src="./assets/img/omnifood-logo.png"
-          />
-        </a>
-        <nav>
-          <ul>
-            <li><a href="#">首頁</a></li>
-            <li><a href="#">關於我們</a></li>
-            <li><a href="#">訂餐服務</a></li>
-            <li><a href="dashboard.html">登入系統</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-
-    <main id="main">
-      <!-- 這裡是子網頁的主要內容 -->
-      <h1>歡迎來到我的網站！</h1>
-      <p>這是範例內容。</p>
-      <p>繼續向下滾動來測試 header 隱藏功能。</p>
+    <div class="outerWrap">
+      <header>
+        <div class="wrap">
+          <nav class="menuBox">
+            <ul class="menu">
+              <li class="menuItem">
+                <a class="mainLink">"關於我們"</a>
+              </li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+    </div>
+    <!-- <main id="main">
+    
+      <section class="section-hero">
+        <img alt="主頁照片" src="./assets/img/mainPagePic.jpg">  
+      <section/>
       <div style="height: 2000px"></div>
-    </main>
+    </main> -->
 
     <script src="./js/calcHeader.js"></script>
   </body>
